[package]
name = "crackleaf-rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0.95"
dirs = "5.0.1"
eframe = "0.29.1"
egui = "0.29.1"
image = "0.25.5"
rfd = "0.14.1"

[package.metadata.bundle]
name = "CrackLeaf"
identifier = "com.crackleaf.app"
category = "public.app-category.productivity"
resources = ["assets"]
