[package]
name = "crackleaf-rs"
version = "0.2.2"
edition = "2021"
authors = ["muxiaoxi"]
build = "build.rs"

[dependencies]
anyhow = "1.0.95"
dirs = "5.0.1"
eframe = "0.29.1"
egui = "0.29.1"
image = "0.25.5"
rfd = "0.14.1"

[package.metadata.bundle]
name = "CrackLeaf"
identifier = "com.crackleaf.app"
category = "public.app-category.productivity"
resources = ["assets"]
icon = ["assets/crackleaf.icns"]
short_description = "CrackLeaf"
long_description = "CrackLeaf PDF unlocker"

[build-dependencies]
image = "0.25.5"
ico = "0.3.0"
winres = "0.1.12"
